--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             { name: 'שמנת חמוצה', category: 'dairy' },
             { name: 'יוגורט', category: 'dairy' },
             { name: 'יוגורט יווני', category: 'dairy' },
+            { name: 'גבינה לבנה', category: 'dairy' },
             { name: 'יוגורט אורגני', category: 'dairy' },
             { name: 'יוגורט לילדים', category: 'dairy' },
             { name: 'גבינת עזים', category: 'dairy' },
