--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             dairy: 'חלבי',
             desserts: 'מעדני חלב',
             meat: 'בשר ודגים',
-            deli: 'מעדנייה',
+            deli: 'מעדניה',
             bakery: 'לחם ומאפים',
             cereals: 'דגנים וקורנפלקס',
             canned: 'שימורים ומזון יבש',
@@ -74,7 +74,7 @@
             { name: 'גבינת שמנת', category: 'dairy' },
             { name: 'פרמזן', category: 'dairy' },
             { name: 'מוצרלה', category: 'dairy' },
-            { name: 'ביצים', category: 'dairy' },
+            { name: 'בייצים', category: 'dairy' },
             { name: 'חמאה', category: 'dairy' },
             { name: 'שמנת מתוקה', category: 'dairy' },
             { name: 'שמנת חמוצה', category: 'dairy' },
@@ -113,7 +113,7 @@
             { name: 'תרד', category: 'fruits' },
             { name: 'שמיר', category: 'fruits' },
             { name: 'טרגון', category: 'fruits' },
-            { name: 'ראשד', category: 'fruits' },
+            { name: 'ראשה', category: 'fruits' },
             { name: 'ריחן', category: 'fruits' },
             { name: 'נענע', category: 'fruits' },
             { name: 'רוקט', category: 'fruits' },
@@ -223,8 +223,8 @@
             { name: 'מלח', category: 'spices' },
             { name: 'סוכר', category: 'spices' },
             { name: 'סוכר חום', category: 'spices' },
-            { name: 'סוכר דמררה', category: 'spices' },
-            { name: 'סוכר גולדן', category: 'spices' },
+            { name: 'סוכר המרה', category: 'spices' },
+            { name: 'סוכר גולן', category: 'spices' },
             { name: 'קוביות סוכר', category: 'spices' },
             { name: 'פלפל שחור', category: 'spices' },
             { name: 'פפריקה', category: 'spices' },
@@ -236,7 +236,7 @@
             { name: 'אורגנו', category: 'spices' },
             { name: 'בזיליקום', category: 'spices' },
             { name: 'זעתר', category: 'spices' },
-            { name: 'חוואיג׳', category: 'spices' },
+            { name: 'חוואייג׳', category: 'spices' },
             { name: 'תבלין לעוף', category: 'spices' },
             { name: 'תבלין לדגים', category: 'spices' },
             { name: 'קארי', category: 'spices' },
@@ -272,7 +272,7 @@
             { name: 'תה נענע', category: 'coffee' },
             { name: 'תה לואיזה', category: 'coffee' },
             { name: 'תה ליפטון', category: 'coffee' },
-            { name: 'תה וויסוצקי', category: 'coffee' },
+            { name: 'תה ויסוצקי', category: 'coffee' },
             { name: 'קפה עלית', category: 'coffee' },
             { name: 'קפסולות נספרסו', category: 'coffee' },
             { name: 'קפסולות דולצ׳ה גוסטו', category: 'coffee' },
@@ -308,7 +308,7 @@
             { name: 'ביסקוויטים', category: 'snacks' },
             { name: 'קליק', category: 'snacks' },
             { name: 'תפוצ׳יפס', category: 'snacks' },
-            { name: 'ווופלים', category: 'snacks' },
+            { name: 'וופלים', category: 'snacks' },
             { name: 'וופלי', category: 'snacks' },
             { name: 'עוגת דבש', category: 'snacks' },
             { name: 'מרשמלו', category: 'snacks' },
@@ -322,7 +322,7 @@
             { name: 'בצק פילו קפוא', category: 'frozen' },
             { name: 'בצק פיצה קפוא', category: 'frozen' },
             { name: 'בצק ג׳חנון קפוא', category: 'frozen' },
-            { name: 'בצק מלוואח קפוא', category: 'frozen' },
+            { name: 'בצק מלווח קפוא', category: 'frozen' },
             { name: 'בצק סמבוסק קפוא', category: 'frozen' },
             { name: 'בצק בורקס קפוא', category: 'frozen' },
             { name: 'קוביות בצק קפוא', category: 'frozen' },
@@ -348,8 +348,8 @@
             { name: 'ביו יוגורט', category: 'health' },
             { name: 'פרוביוטיקה', category: 'health' },
             { name: 'חלב סרה', category: 'health' },
-            { name: 'נייר טואלט', category: 'cleaning' },
-            { name: 'מגבות נייר', category: 'cleaning' },
+            { name: 'ניר טואלט', category: 'cleaning' },
+            { name: 'מגבות ניר', category: 'cleaning' },
             { name: 'סבון כלים', category: 'cleaning' },
             { name: 'אבקת כביסה', category: 'cleaning' },
             { name: 'מרכך כביסה', category: 'cleaning' },
@@ -366,7 +366,7 @@
             { name: 'מלח למדיח', category: 'cleaning' },
             { name: 'נוזל שטיפה למדיח', category: 'cleaning' },
             { name: 'אבקת סודה', category: 'cleaning' },
-            { name: 'חומץ לניקוי', category: 'cleaning' },
+            { name: 'חומץ לניקיון', category: 'cleaning' },
             { name: 'סבון ידיים', category: 'hygiene' },
             { name: 'מגבונים לחים', category: 'hygiene' },
             { name: 'מברשת שיניים', category: 'hygiene' },
@@ -389,12 +389,12 @@
             { name: 'ג׳ל לשיער', category: 'hygiene' },
             { name: 'ספריי לשיער', category: 'hygiene' },
             { name: 'תחבושות', category: 'hygiene' },
-            { name: 'פלסטרים', category: 'hygiene' },
+            { name: 'פלסטריה', category: 'hygiene' },
             { name: 'צמר גפן', category: 'hygiene' },
             { name: 'מקלוני אוזניים', category: 'hygiene' },
             { name: 'טמפונים', category: 'hygiene' },
             { name: 'מגני תחתון', category: 'hygiene' },
-            { name: 'תחתוני נייר', category: 'hygiene' },
+            { name: 'תחתוני ניר', category: 'hygiene' },
             { name: 'תחתוני חד פעמי', category: 'hygiene' },
             { name: 'נרות שבת', category: 'candles' },
             { name: 'נרות חנוכה', category: 'candles' },
@@ -590,10 +590,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div className="text-left">
+                                <button 
+                                    onClick={() => document.getElementById('shopping-list-section')?.scrollIntoView({ behavior: 'smooth', block: 'start' })}
+                                    className="flex flex-col items-center gap-1 px-4 py-2 bg-indigo-100 hover:bg-indigo-200 rounded-lg transition-all cursor-pointer"
+                                >
                                     <div className="text-sm text-gray-600">סה״כ</div>
                                     <div className="text-2xl font-bold text-indigo-600">{totalItems}</div>
-                                </div>
+                                    <div className="text-xs text-indigo-600">👇 לרשימה</div>
+                                </button>
                             </div>
                             {totalItems > 0 && (
                                 <div className="bg-indigo-50 rounded-lg p-4">
@@ -660,7 +664,7 @@
                         </div>
 
                         {items.length > 0 && (
-                            <div className="bg-white rounded-2xl shadow-lg p-6">
+                            <div id="shopping-list-section" className="bg-white rounded-2xl shadow-lg p-6">
                                 <div className="flex justify-between items-center mb-4">
                                     <h2 className="text-xl font-bold text-gray-800">הרשימה שלנו</h2>
                                     {purchasedItems > 0 && (
