--- a/index.html
+++ b/index.html
@@ -134,9 +134,8 @@
             { name: 'מיני וויטס', category: 'cereals' },
             { name: 'פרוסטיז', category: 'cereals' },
             { name: 'כריות שוקולד', category: 'cereals' },
-            { name: 'צ\'ריוס', category: 'cereals' },
-            { name: 'לאקי צ\'ארמס', category: 'cereals' },
-            { name: 'קפטן קראנץ\'', category: 'cereals' },
+            { name: 'צו'ריוס', category: 'cereals' },
+            { name: 'קפטן קראנץ'', category: 'cereals' },
             
             // Fruits & Vegetables - פירות וירקות (מורחב!)
             { name: 'עגבניות', category: 'fruits' },
@@ -165,7 +164,7 @@
             { name: 'תרד', category: 'fruits' },
             { name: 'שמיר', category: 'fruits' },
             { name: 'טרגון', category: 'fruits' },
-            { name: 'ראשה', category: 'fruits' },
+            { name: 'ראשאד', category: 'fruits' },
             { name: 'ריחן', category: 'fruits' },
             { name: 'נענע', category: 'fruits' },
             { name: 'רוקט', category: 'fruits' },
@@ -825,7 +824,7 @@
                                 <div className="flex gap-2">
                                     <button onClick={finishShopping} 
                                         className="flex-1 bg-green-600 text-white px-6 py-3 rounded-lg hover:bg-green-700 font-semibold">
-                                        ✓ סיים וזשמור
+                                        ✓ סיים ושמור
                                     </button>
                                     <button onClick={() => { setShowFinishShopping(false); setTotalAmount(''); }}
                                         className="px-6 py-3 bg-gray-300 dark:bg-gray-600 text-gray-700 dark:text-gray-200 rounded-lg">
