--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
             { name: 'מיני וויטס', category: 'cereals' },
             { name: 'פרוסטיז', category: 'cereals' },
             { name: 'כריות שוקולד', category: 'cereals' },
-            { name: 'צו'ריוס', category: 'cereals' },
-            { name: 'קפטן קראנץ'', category: 'cereals' },
+            { name: 'צ\'ריוס', category: 'cereals' },
+            { name: 'לאקי צ\'ארמס', category: 'cereals' },
+            { name: 'קפטן קראנץ\'', category: 'cereals' },
             
             // Fruits & Vegetables - פירות וירקות (מורחב!)
             { name: 'עגבניות', category: 'fruits' },
@@ -164,7 +165,7 @@
             { name: 'תרד', category: 'fruits' },
             { name: 'שמיר', category: 'fruits' },
             { name: 'טרגון', category: 'fruits' },
-            { name: 'ראשאד', category: 'fruits' },
+            { name: 'ראשה', category: 'fruits' },
             { name: 'ריחן', category: 'fruits' },
             { name: 'נענע', category: 'fruits' },
             { name: 'רוקט', category: 'fruits' },
@@ -824,7 +825,7 @@
                                 <div className="flex gap-2">
                                     <button onClick={finishShopping} 
                                         className="flex-1 bg-green-600 text-white px-6 py-3 rounded-lg hover:bg-green-700 font-semibold">
-                                        ✓ סיים ושמור
+                                        ✓ סיים וזשמור
                                     </button>
                                     <button onClick={() => { setShowFinishShopping(false); setTotalAmount(''); }}
                                         className="px-6 py-3 bg-gray-300 dark:bg-gray-600 text-gray-700 dark:text-gray-200 rounded-lg">
@@ -1147,12 +1148,45 @@
                                                 <div className="flex items-center gap-2">
                                                     <button onClick={() => updateQuantity(item.id, item.quantity - 1)}
                                                         className="w-8 h-8 bg-gray-200 dark:bg-gray-600 rounded-lg font-bold hover:bg-gray-300 dark:hover:bg-gray-500">-</button>
+                        {/* Shopping List */}
+                        {filteredItems.length > 0 && (
+                            <div id="shopping-list-section" className="bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-6">
+                                <div className="flex justify-between items-center mb-4">
+                                    <h2 className="text-xl font-bold text-gray-800 dark:text-white">
+                                        הרשימה שלנו ({filteredItems.length})
+                                    </h2>
+                                </div>
+                                {Object.entries(groupedItems).map(([category, categoryItems]) => (
+                                    <div key={category} className="mb-6">
+                                        <h3 className="text-lg font-bold text-indigo-700 dark:text-indigo-400 mb-3 pb-2 border-b-2 border-indigo-200 dark:border-indigo-700 flex items-center gap-2">
+                                            <span className="text-2xl">{CATEGORIES[category]?.icon}</span>
+                                            {CATEGORIES[category]?.name} ({categoryItems.length})
+                                        </h3>
+                                        {categoryItems.map(item => (
+                                            <div key={item.id} className={`flex items-center gap-3 p-3 rounded-lg mb-2 ${item.purchased ? 'bg-green-50 dark:bg-green-900/20 border-2 border-green-200 dark:border-green-700' : 'bg-gray-50 dark:bg-gray-700 border-2 border-gray-200 dark:border-gray-600'}`}>
+                                                <button onClick={() => togglePurchased(item.id, item.purchased)}
+                                                    className={`w-6 h-6 rounded-full border-2 flex items-center justify-center flex-shrink-0 ${item.purchased ? 'bg-green-500 border-green-500' : 'border-gray-300 dark:border-gray-500'}`}>
+                                                    {item.purchased && <span className="text-white text-xs">✓</span>}
+                                                </button>
+                                                <div className="flex-1 min-w-0">
+                                                    <span className={`font-medium ${item.purchased ? 'text-gray-500 dark:text-gray-400 line-through' : 'text-gray-800 dark:text-white'}`}>
+                                                        {item.name}
+                                                    </span>
+                                                    {item.addedBy && (
+                                                        <span className={`text-xs px-2 py-0.5 rounded-full border inline-block ml-2 ${item.addedByColor}`}>
+                                                            {item.addedBy}
+                                                        </span>
+                                                    )}
+                                                </div>
+                                                <div className="flex items-center gap-2 flex-shrink-0">
+                                                    <button onClick={() => updateQuantity(item.id, item.quantity - 1)}
+                                                        className="w-8 h-8 bg-gray-200 dark:bg-gray-600 rounded-lg font-bold hover:bg-gray-300 dark:hover:bg-gray-500">-</button>
                                                     <span className="w-12 text-center font-bold text-indigo-600 dark:text-indigo-400">{item.quantity}</span>
                                                     <button onClick={() => updateQuantity(item.id, item.quantity + 1)}
                                                         className="w-8 h-8 bg-indigo-100 dark:bg-indigo-900 rounded-lg font-bold hover:bg-indigo-200 dark:hover:bg-indigo-800">+</button>
                                                 </div>
                                                 <button onClick={() => window.firestore.deleteDoc(window.firestore.doc(window.db, 'shopping-items', item.id))}
-                                                    className="w-8 h-8 bg-red-100 dark:bg-red-900 rounded-lg text-red-600 dark:text-red-400 hover:bg-red-200 dark:hover:bg-red-800">🗑</button>
+                                                    className="w-8 h-8 bg-red-100 dark:bg-red-900 rounded-lg text-red-600 dark:text-red-400 hover:bg-red-200 dark:hover:bg-red-800 flex-shrink-0">🗑</button>
                                             </div>
                                         ))}
                                     </div>
